--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     position: fixed;
     width: 100%;
     top: 0;
+    margin-top: 0px;
 }
 h1{
     text-align: center;
@@ -40,4 +41,12 @@ table,th,td {
   }
   th {
     text-align: left;
+  }
+
+  .input-field {
+    margin-bottom: 12px;
+  }
+
+  .mt {
+    margin-top: 40px;
   }
